--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ test {
 dependencies {
     compile("com.codeborne:selenide:5.11.1")
     compile("io.qameta.allure:allure-selenide:2.13.6")
+    compile("org.aeonbits.owner:owner:1.0.12")
 
     compile("org.junit.jupiter:junit-jupiter-api:5.7.0")
     compile("org.junit.jupiter:junit-jupiter-engine:5.7.0")
